--- a/config.json
+++ b/config.json
@@ -1,7 +1,33 @@
 {
-    "username": "2210433011",
-    "password": "08211212",
-    "pay_password": "211212",
-    "date": "2024-04-24",
-    "time": "21:00-22:00"
+    "sport": {
+        "羽毛球": {
+            "id": 0
+        },
+        "足球": {
+            "id": 1
+        },
+        "排球": {
+            "id": 2
+        },
+        "网球": {
+            "id": 3
+        },
+        "篮球": {
+            "id": 4
+        },
+        "壁球": {
+            "id": 5
+        },
+        "一楼重量型健身": {
+            "id": 6,
+            "venue": ["南区西馆一楼健身房"]
+        },
+        "二楼有氧健身": {
+            "id": 7,
+            "venue": ["南区西馆二楼健身房"]
+        },
+        "游泳": {
+            "id": 8
+        }
+    }
 }
